k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finpulse-backend
  namespace: finpulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finpulse-backend
  template:
    metadata:
      labels:
        app: finpulse-backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: backend
          image: ghcr.io/krasteki/finpulse-backend:888207bb1872bd9af8fe24525b253b3d02395298
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: finpulse-backend
  namespace: finpulse
spec:
  selector:
    app: finpulse-backend
  ports:
    - port: 8000
      targetPort: 8000
